Fixed large alignment

--- a/src/assets/scss/custom/_navigation.scss
+++ b/src/assets/scss/custom/_navigation.scss
@@ -51,7 +51,7 @@
 .top-bar {
     margin-top: -10px;
     margin-right: auto;
-    margin-left: 0px;
+    margin-left: 110px;
      
     }
  
